# static-files-tutorial-axum

./: Cargo.toml  License.txt  README.md  Shuttle.toml
src/: main.rs
static/: index.css  index.html  index.js  other_page.html
