[package]
name = "axum-static-files"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
shuttle-axum = "0.32"
shuttle-runtime = "0.32.0"
tokio = "1.32.0"
tower-http = { version = "0.4.4", features = ["fs"] }
